--- a/references.bib
+++ b/references.bib
@@ -419,3 +419,35 @@
 	year = {1988},
 	publisher = {Springer},
 }
+
+@incollection{operads-and-props,
+	title = {Operads and PROPs},
+	editor = {M. Hazewinkel},
+	series = {Handbook of Algebra},
+	publisher = {North-Holland},
+	volume = {5},
+	pages = {87-140},
+	year = {2008},
+	issn = {1570-7954},
+	author = {Martin Markl},
+}
+
+@article{on-refined-vogels-universality,
+	title = {On refined Vogel's universality},
+	journal = {Physics Letters B},
+	volume = {867},
+	pages = {139596},
+	year = {2025},
+	issn = {0370-2693},
+	author = {Liudmila Bishler and Andrei Mironov},
+}
+
+@article{can-yang-baxter-imply-lie-algebra,
+	title = {Can Yang-Baxter imply Lie algebra?},
+	journal = {Physics Letters B},
+	volume = {867},
+	pages = {139586},
+	year = {2025},
+	issn = {0370-2693},
+	author = {D. Khudoteplov and A. Morozov and A. Sleptsov},
+}
