--- a/welded_knots_Ig_and_arrow_diagrams.tex
+++ b/welded_knots_Ig_and_arrow_diagrams.tex
@@ -64,7 +64,7 @@ The finite type theory of welded long knots is similar to that of classical long
 Just as in the classical case, the notions of invariants of \(m\)-singular welded long knots, their differentiability, and the derivative and boundary operators transfer over the the welded case. Here, the derivative and boundary depend on the type of singularity.
 
 \begin{align*}
-	\partial \left( \semivirtposcross \right) &= \poscross  -  \virtcross \\
+	\partial \left( \semivirtposcross \right) &= \poscross  - \virtcross \\
 	\partial \left( \semivirtnegcross \right) &= \virtcross - \negcross
 \end{align*}
 
@@ -73,15 +73,17 @@ And correspondingly for \(m\)-singular invariants and the operator \(\delta\). A
 
 \begin{definitions}
 	\begin{enumerate}
-		\item A \textbf{long arrow diagram} of order \(m\) is an oriented line with a distinguished set of \(m\) (ordered) pairs of points, considered up to orientation-preserving diffeomorphism of the line. The set of all long arrow diagrams forms an algebra \(\mathcal{D}_{w}(|)\). The product is induced by the natural connected sum operation on long knots, and the coproduct is given by the same formula as in the classical case. This is called the \textbf{bialgebra of long arrow diagrams}, and it is also graded by degree.
-		\item The \textbf{long arrow diagram of an \(m\)-singular welded long knot}, denoted \(\sigma(k)\) is the arrow diagram formed as follows. Traverse the welded long knot, and whenever a singularity is encountered, place a point on the oriented line. If the hollow part of the singularity is traversed, place a tail, and if the filled part is traversed place a head. Points corresponding to the same singularity are paired, and the order of the pair is tail first, then head.
+		\item A \textbf{long arrow diagram} of order \(m\) is an oriented line (the \textbf{skeleton}) with a distinguished set of \(m\) (ordered) pairs of points, considered up to orientation-preserving diffeomorphism of the line. The set of all long arrow diagrams forms an algebra \(\mathcal{D}_{w}(|)\). The product is induced by the natural connected sum operation on long knots, and the coproduct is given by the same formula as in the classical case. This is called the \textbf{bialgebra of long arrow diagrams}, and it is also graded by degree.
+		\item The \textbf{long arrow diagram of an \(m\)-singular welded long knot}, denoted \(\sigma(k)\) is the arrow diagram formed as follows. Traverse the welded long knot, and whenever a singularity is encountered, place a point on the skeleton. If the hollow part of the singularity is traversed, place a tail, and if the filled part is traversed place a head. Points on the skeleton corresponding to the same singularity are paired, and the order of the pair is tail first, then head.
 	\end{enumerate}
 \end{definitions}
 
 \begin{example}
-	\begin{shaded}
-		Example of arrow diagram and \(\sigma\).
-	\end{shaded}
+	\[
+		\includegraphics[width=0.40\textwidth, valign=c]{graphics/knot_welded_singular_example.pdf}
+		\quad \overset{\sigma}{\longmapsto} \quad
+		\includegraphics[width=0.40\textwidth, valign=c]{graphics/knot_welded_singular_example_arrow_diagram.pdf}
+	\]
 \end{example}
 
 Just as in the classical case, there are natural relations to consider on arrow diagrams. The operations and maps defined above factor through the quotient, and we obtain the algebra \(\mathcal{A}_{w}(|)\). We also refer to arrow diagrams as elements of this algebra. However, we are more interested in the algebra \(\mathcal{J}_{w}(|)\).
@@ -92,33 +94,70 @@ Just as in the classical case, there are natural relations to consider on arrow 
 		\item at each trivalent vertex, a cyclic order of the incident edges,
 		\item a fixed linear order on the univalent vertices.
 	\end{itemize}
-	modulo the following relations:
+	modulo:
 	\begin{enumerate}
-		\begin{shaded}
-			\item any directed \textbf{STU} relations
-			\item any directed \textbf{AS} relations
-			\item any directed \textbf{IHX} relations
-			\item the \textbf{TC relation} (tails commute relation)
-				\begin{equation}
-					\label{eq:TC}
-					\tag{\tc}
-					\text{tails commuting}
-				\end{equation}
-		\end{shaded}
+		\item Six \textbf{directed STU} relations. For example,
+		\begin{equation}
+			\tag{\stu}
+			\includegraphics[width=0.10\textwidth, valign=c]{graphics/stu_welded_head_head_s.pdf}
+			\quad
+			=
+			\quad
+			\includegraphics[width=0.10\textwidth, valign=c]{graphics/stu_welded_head_head_t.pdf}
+			\quad
+			-
+			\quad
+			\includegraphics[width=0.10\textwidth, valign=c]{graphics/stu_welded_head_head_u.pdf}.
+		\end{equation}
+		Relations hold for both choices of vertex type (two-heads-one-tail, one-head-two-tails) and all three choices of orientation of the trivalent vertex. Note that even though the skeleton is the line rather than the circle, we still draw it curved to distinguish it.
+		\item Any \textbf{directed AS} relation. For example,
+		\begin{equation}
+			\tag{\as}
+			\includegraphics[width=0.05\textwidth, valign=c]{graphics/as_welded_head_head_a.pdf}
+			\quad
+			=
+			\quad
+			-
+			\includegraphics[width=0.05\textwidth, valign=c]{graphics/as_welded_head_head_s.pdf}.
+		\end{equation}
+		Again, for any choice of vertex type and rotation.
+		\item Any \textbf{directed IHX} relations
+		\begin{equation}
+			\tag{\ihx}
+			\includegraphics[width=0.10\textwidth, valign=c]{graphics/ihx_welded_example_i.pdf}
+			\quad
+			=
+			\quad
+			\includegraphics[width=0.10\textwidth, valign=c]{graphics/ihx_welded_example_h.pdf}
+			\quad
+			-
+			\quad
+			\includegraphics[width=0.10\textwidth, valign=c]{graphics/ihx_welded_example_x.pdf}.
+		\end{equation}
+		These hold for any compatible choice of both vertices in the diagrams.
+		\item The \textbf{TC relation} (tails commute relation)
+		\begin{equation}
+			\label{eq:TC}
+			\tag{\tc}
+			\includegraphics[width=0.10\textwidth, valign=c]{graphics/tc_relation_c.pdf}
+			\quad
+			=
+			\quad
+			-
+			\includegraphics[width=0.10\textwidth, valign=c]{graphics/tc_relation_t.pdf}.
+		\end{equation}
 	\end{enumerate}
 \end{definition}
 
 The main difference between \(\mathcal{J}_{w}(|)\) and \(\mathcal{J}(|)\) is the tails commute relation. This relation is a consequence of the overcrossings commute relation (in a sense it's the shadow of that relation on the associated graded side). This new relation is very important and dramatically reduces the complexity of the algebra.
 
 \begin{proposition}[Two-in-one-out rule]
-	In \(\mathcal{J}_{w}(|)\), any diagram with one vertex oriented inwards and two vertices oriented outward vanishes.
+	In \(\mathcal{J}_{w}(|)\), any diagram containing a trivalent vertex with one vertex oriented inwards and two vertices oriented outward vanishes.
 \end{proposition}
 
-\begin{shaded}
-	\begin{proof}
-		Follow the path argument of the classical case. Then apply \ref{eq:TC}.
-	\end{proof}
-\end{shaded}
+\begin{proof}
+	Take such a diagram with a one-in-two-out vertex. Apply \ref{eq:STU}'s to all other vertices of the arrow diagram. The result is a sum of arrow diagrams, each containing a trivalent one-in-two-out vertex. We show that each such arrow diagram vasnishes. Since there is only one trivalent vertex in each diagram, the one-in-two-out vertex's incoming edge has its tail on the skeleton. Therefore applying the relevant \ref{eq:STU} relation equates the diagram with a difference of two diagrams that differ only by the order of placement of two tails on the skeleton. By \ref{eq:TC}, the difference is zero.
+\end{proof}
 
 Resultingly, only two versions of \ref{eq:STU}, one of \ref{eq:AS} and one of \ref{eq:IHX} remain nontrivial relations in \(\mathcal{J}_{w}(|)\).
 
