Finesse operads, props, and envelopes of props, and diagrams,
- various notational changes

--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -148,7 +148,7 @@ where \(\delta_{m}\) is the transpose (adjoint) of \(\partial_{m}\). The maps \(
 		\item Which functions on the non-singular objects \(\mathcal{O}_{0}\) are obtained by \(m\) consecutive integrations of functionals in \(\mathcal{O}_{m}^{\ast}\)?
 	\end{enumerate}
 \end{questions}
-The answers to the above questions are given precisely by the following spaces1
+The answers to the above questions are given precisely by the following spaces:
 \begin{definitions}
 	\label{def:integration-theory-modules}
 	\begin{enumerate}
