Welded knot all reidemeister moves, diagrams, remarks

--- a/macros.tex
+++ b/macros.tex
@@ -50,6 +50,17 @@
 
 \newcommand{\ihx}{\texttt{IHX}}
 
+\newcommand{\ronef}{\texttt{R1}\ensuremath{^{\texttt{f}}}}
+\newcommand{\rtwo}{\texttt{R2}}
+\newcommand{\rthree}{\texttt{R3}}
+
+\newcommand{\vrone}{\texttt{VR1}}
+\newcommand{\vrtwo}{\texttt{VR2}}
+\newcommand{\vrthree}{\texttt{VR3}}
+\newcommand{\vrfour}{\texttt{VR4}}
+
+\newcommand{\oc}{\texttt{OC}}
+
 \newcommand{\tc}{\texttt{TC}}
 
 
