--- a/references.bib
+++ b/references.bib
@@ -451,3 +451,14 @@
 	issn = {0370-2693},
 	author = {D. Khudoteplov and A. Morozov and A. Sleptsov},
 }
+
+@article{virtual-knot-theory,
+	title = {Virtual Knot Theory},
+	journal = {European Journal of Combinatorics},
+	volume = {20},
+	number = {7},
+	pages = {663-691},
+	year = {1999},
+	issn = {0195-6698},
+	author = {Louis H. Kauffman},
+}
